update school information

--- a/template_settings/common/renames.tex
+++ b/template_settings/common/renames.tex
@@ -134,8 +134,7 @@
 %%
 
 \newcommand{\School}{
-	Название высшей школы
-%	Высшая школа программной инженерии
+Высшая школа программной инженерии
 }
 \newcommand{\practiceTitle}{Тема практики}
 
