specify practice type

--- a/template_settings/common/renames.tex
+++ b/template_settings/common/renames.tex
@@ -116,8 +116,7 @@
 %%% РАЗДЕЛ ДЛЯ ОФОРМЛЕНИЯ ПРАКТИКИ
 %Место прохождения практики
 \newcommand{\PracticeType}{Отчет о прохождении %
-	%стационарной производственной (технологической (проектно-технологической)) %
-	такой-то % тип и вид ЗАМЕНИТЬ
+  производственной технологической (проектно-технологической)%
 	практики}
 
 \newcommand{\Workplace}{СПбПУ, ИКНК, ВШ ПИ} % TODO Rename this variable
