--- a/template_settings/common/renames.tex
+++ b/template_settings/common/renames.tex
@@ -135,7 +135,7 @@
 \newcommand{\School}{
 Высшая школа программной инженерии
 }
-\newcommand{\practiceTitle}{Тема практики}
+\newcommand{\practiceTitle}{Разработка инструмента автоматизированной миграции репозиториев и CI/CD пайплайнов из GitHub в GitLab}
 
 
 %% ВНИМАНИЕ! Необходимо либо заменить текст аннотации (ключевых слов) на русском и английском, либо удалить там весь текст, иначе в свойства pdf-отчета по практике пойдет шаблонный текст.
