specified name and group

--- a/template_settings/common/renames.tex
+++ b/template_settings/common/renames.tex
@@ -4,7 +4,7 @@
 \newcommand{\Author}{И.О.\,Фамилия} % И.О. Фамилия автора
 \newcommand{\AuthorFull}{Фамилия Имя Отчество} % Фамилия Имя Отчество автора
 \newcommand{\AuthorFullDat}{Фамилия Имя Отчество} % Фамилия Имя Отчество автора в дательном падеже (Кому? Студенту...)
-\newcommand{\AuthorFullVin}{Фамилия Имя Отчество} % в винительном падеже (Кого? что?  Програмиста ...)
+\newcommand{\AuthorFullVin}{Каралюса Никиты Юргисовича} % в винительном падеже (Кого? что?  Програмиста ...)
 \newcommand{\AuthorPhone}{+7-9XX-XXX-XX-XX} % номер телефорна автора для оперативной связи
 \newcommand{\Supervisor}{И.О.\,Фамилия} % И. О. Фамилия научного руководителя
 \newcommand{\SupervisorFull}{Фамилия Имя Отчество} % Фамилия Имя Отчество научного руководителя
@@ -59,7 +59,7 @@
 \newcommand{\approveYear}{202\underline{\hspace*{0.01\textheight}}} % <- НЕ МЕНЯТЬ, ТОЛЬКО С 2030го :)
 %%
 %%
-\newcommand{\group}{N} % заменить вместо N номер группы
+\newcommand{\group}{51309303/20302} % заменить вместо N номер группы
 \newcommand{\thesisSpecialtyCode}{ХХ.ХХ.ХХ}% код направления подготовки
 \newcommand{\thesisSpecialtyTitle}{Наименование направления подготовки} % наименование направления/специальности
 \newcommand{\thesisOPPostfix}{YY} % последние цифры кода образовательной программы (после <<_>>)
