--- a/template_settings/common/renames.tex
+++ b/template_settings/common/renames.tex
@@ -116,7 +116,7 @@
 %%% РАЗДЕЛ ДЛЯ ОФОРМЛЕНИЯ ПРАКТИКИ
 %Место прохождения практики
 \newcommand{\PracticeType}{Отчет о прохождении %
-  производственной технологической (проектно-технологической)%
+  технологической (проектно-технологической) %
 	практики}
 
 \newcommand{\Workplace}{СПбПУ, ИКНК, ВШ ПИ} % TODO Rename this variable
