--- a/template_settings/common/renames.tex
+++ b/template_settings/common/renames.tex
@@ -119,7 +119,7 @@
   технологической (проектно-технологической) %
 	практики}
 
-\newcommand{\Workplace}{СПбПУ, ИКНК, ВШ ПИ} % TODO Rename this variable
+\newcommand{\Workplace}{г.Санкт-Петербург, просп.Медиков, д.10к8, кв.23}
 
 % Даты начала/окончания
 \newcommand{\PracticeStartDate}{%
