Specify supervisor details in templates

--- a/my_folder/practice.tex
+++ b/my_folder/practice.tex
@@ -56,7 +56,7 @@
 {\noindent {\bfseries Сроки практики:} \uline{с \PracticeStartDate~по \PracticeEndDate.}}\par
 
 
-{\noindent {\bfseries Руководитель практики от \SPbPUOfficialShort:}} {\expandafter \ulined \SupervisorFull, \SupervisorJob, \SupervisorDegree.} %Ф.И.О., должность, степень
+{\noindent {\bfseries Руководитель практики от \SPbPUOfficialShort:}} {\expandafter \ulined \SupervisorFull, \SupervisorDegree.} %Ф.И.О., должность, степень
 
 
 
