--- a/template_settings/common/renames.tex
+++ b/template_settings/common/renames.tex
@@ -7,11 +7,11 @@
 \newcommand{\AuthorFullVin}{Каралюса Никиты Юргисовича} % в винительном падеже (Кого? что?  Програмиста ...)
 \newcommand{\AuthorPhone}{+7-9XX-XXX-XX-XX} % номер телефорна автора для оперативной связи
 \newcommand{\Supervisor}{И.О.\,Фамилия} % И. О. Фамилия научного руководителя
-\newcommand{\SupervisorFull}{Фамилия Имя Отчество} % Фамилия Имя Отчество научного руководителя
+\newcommand{\SupervisorFull}{Пархоменко Владимир Андреевич} % Фамилия Имя Отчество научного руководителя
 \newcommand{\SupervisorVin}{И.О.\,Фамилию} % И. О. Фамилия научного руководителя  в винительном падеже (Кого? что? Руководителя ...)
 \newcommand{\SupervisorJob}{должность} %
 \newcommand{\SupervisorJobVin}{должность} % в винительном падеже (Кого? что?  Програмиста ...)
-\newcommand{\SupervisorDegree}{степень} %
+\newcommand{\SupervisorDegree}{ст. преподаватель ВШПИ} %
 \newcommand{\SupervisorTitle}{звание} %
 %%
 %%
