Update additional consultant details in templates

--- a/my_folder/practice.tex
+++ b/my_folder/practice.tex
@@ -61,8 +61,7 @@
 
 
 {\noindent \bfseries
-	Консультант практики от \SPbPUOfficialShort:
-%	Консультанты практики от \SPbPUOfficialShort:
+  Руководитель практической подготовки от профильной организации:
 }
 {\noindent \expandafter \ulined \ConsultantExtraFull, \ConsultantExtraDegree}.%,      %% первый консультант Ф.И.О., должность, степень
 %{\noindent \expandafter \ulined \ConsultantExtraTwoFull, \ConsultantExtraTwoDegree.}  %% второй консультант Ф.И.О., должность, степень
