--- a/template_settings/common/renames.tex
+++ b/template_settings/common/renames.tex
@@ -35,9 +35,9 @@
 \newcommand{\ConsultantNorm}{И.О.\,Фамилия} % И. О. Фамилия консультанта по нормоконтролю. ТОЛЬКО из числа ППС!
 \newcommand{\ConsultantNormDegree}{должность, степень} %
 %%% Первый консультант
-\newcommand{\ConsultantExtraFull}{Фамилия Имя Отчетство} % Фамилия Имя Отчетство дополнительного консультанта
+\newcommand{\ConsultantExtraFull}{Маркелов Максим Александрович} % Фамилия Имя Отчетство дополнительного консультанта
 \newcommand{\ConsultantExtra}{И.О.\,Фамилия} % И. О. Фамилия дополнительного консультанта
-\newcommand{\ConsultantExtraDegree}{должность, степень} %
+\newcommand{\ConsultantExtraDegree}{тех. руководитель команды разработки} %
 \newcommand{\ConsultantExtraVin}{И.О.\,Фамилию} % И. О. Фамилия дополнительного консультанта в винительном падеже (Кого? что? Руководителя ...)
 \newcommand{\ConsultantExtraDegreeVin}{должность, степень} %  в винительном падеже (Кого? что? Руководителя ...)
 %%% Второй консультант
