Update author, supervisor, and consultant details in templates

--- a/my_folder/practice.tex
+++ b/my_folder/practice.tex
@@ -61,7 +61,7 @@
 
 
 {\noindent \bfseries
-  Руководитель практической подготовки от профильной организации:
+  Руководитель практики от профильной организации:
 }
 {\noindent \expandafter \ulined \ConsultantExtraFull, \ConsultantExtraDegree}.%,      %% первый консультант Ф.И.О., должность, степень
 %{\noindent \expandafter \ulined \ConsultantExtraTwoFull, \ConsultantExtraTwoDegree.}  %% второй консультант Ф.И.О., должность, степень
@@ -75,8 +75,8 @@
 	Руководитель практики		&	&\\
 	от \SPbPUOfficialShort		&	& \Supervisor     \\[\mfloatsep] % если не хватает места, закомментировать
 
-	Консультант практики		&	&\\
-	от \SPbPUOfficialShort		&	& \ConsultantExtra\\[\mfloatsep]
+  Руководитель практики		&	&\\
+	от профильной организации		&	& \ConsultantExtra\\[\mfloatsep]
 %							&	& \ConsultantExtraTwo\\[\mfloatsep]
 
 	Обучающийся				&	&\Author\\[\mfloatsep]
