--- a/template_settings/common/renames.tex
+++ b/template_settings/common/renames.tex
@@ -1,12 +1,12 @@
 %%% Внесите свои данные - Input your data
 %%
 %%
-\newcommand{\Author}{И.О.\,Фамилия} % И.О. Фамилия автора
+\newcommand{\Author}{Н.Ю.\,Каралюс} % И.О. Фамилия автора
 \newcommand{\AuthorFull}{Фамилия Имя Отчество} % Фамилия Имя Отчество автора
 \newcommand{\AuthorFullDat}{Фамилия Имя Отчество} % Фамилия Имя Отчество автора в дательном падеже (Кому? Студенту...)
 \newcommand{\AuthorFullVin}{Каралюса Никиты Юргисовича} % в винительном падеже (Кого? что?  Програмиста ...)
 \newcommand{\AuthorPhone}{+7-9XX-XXX-XX-XX} % номер телефорна автора для оперативной связи
-\newcommand{\Supervisor}{И.О.\,Фамилия} % И. О. Фамилия научного руководителя
+\newcommand{\Supervisor}{В.А.\,Пархоменко} % И. О. Фамилия научного руководителя
 \newcommand{\SupervisorFull}{Пархоменко Владимир Андреевич} % Фамилия Имя Отчество научного руководителя
 \newcommand{\SupervisorVin}{И.О.\,Фамилию} % И. О. Фамилия научного руководителя  в винительном падеже (Кого? что? Руководителя ...)
 \newcommand{\SupervisorJob}{должность} %
@@ -36,7 +36,7 @@
 \newcommand{\ConsultantNormDegree}{должность, степень} %
 %%% Первый консультант
 \newcommand{\ConsultantExtraFull}{Маркелов Максим Александрович} % Фамилия Имя Отчетство дополнительного консультанта
-\newcommand{\ConsultantExtra}{И.О.\,Фамилия} % И. О. Фамилия дополнительного консультанта
+\newcommand{\ConsultantExtra}{М.А.\,Маркелов} % И. О. Фамилия дополнительного консультанта
 \newcommand{\ConsultantExtraDegree}{тех. руководитель команды разработки} %
 \newcommand{\ConsultantExtraVin}{И.О.\,Фамилию} % И. О. Фамилия дополнительного консультанта в винительном падеже (Кого? что? Руководителя ...)
 \newcommand{\ConsultantExtraDegreeVin}{должность, степень} %  в винительном падеже (Кого? что? Руководителя ...)
