--- a/my_folder/0_my_settings.tex
+++ b/my_folder/0_my_settings.tex
@@ -1,26 +1,26 @@
-%%%% Настройки автора 
-%% 
+%%%% Настройки автора
+%%
 %% 	 Пожалуйста, ознакомьтесь с функционалом шаблона из [1,2], а также с пакетами, подключенными в ch_preamble.
-%% 
+%%
 %%   Новым командам лучше присваивать уникальные имена.
-%% 
+%%
 %%%% Author settings
-%% 
-%%   Please, see all possible packages using the search in files of ch_preamble. 
-%%   
+%%
+%%   Please, see all possible packages using the search in files of ch_preamble.
+%%
 %%   Please, for user-defined commands write only unique command titles.
 %%
 
 
 %%%% Подключение библиографии / Upload bibliography
-%% 
-%% 
-\addbibresource{my_folder/my_biblio.bib} % 
+%%
+%%
+\addbibresource{my_folder/my_biblio.bib} %
 
 
 
 %%%% Полезные настройки / Usefull settings
-%% 
+%%
 %% Раскомментируйте, чтобы
 %%
 %% pdf при открытии выравнивался по окну
@@ -29,12 +29,12 @@
 pdfstartview={FitBH}
 }
 %% перенумеровать все строки pdf
-%% enumerate all lines in pdf 
+%% enumerate all lines in pdf
 %\usepackage{lineno}
 %\linenumbers
 %%
-%% установить дату после названия ВКР - расскоментируйте код в title.tex
-%% set data after the thesis title - uncomment code in title.tex
+%% установить дату после названия ВКР - расскоментируйте код в 1_title.tex
+%% set data after the thesis title - uncomment code in 1_title.tex
 \let\ordinal\relax %avoid extra warning
 \usepackage{datetime}
 
@@ -80,14 +80,14 @@ pdfstartview={FitBH}
 %%% Правила задания нового окружения
 
 \theoremstyle{myplain} % первая команда для ввода доказательств
-\newtheorem{m-new-env-first}{Название\_окружения}[chapter] 
+\newtheorem{m-new-env-first}{Название\_окружения}[chapter]
 % вместо m-new-env-first необходимо подставить название нового окружения;
 % вместо Название\_окружения необходимо подставить название окружения, выводящееся в pdf;
 % последний параметр обеспечивает нумерацию в пределах главы не меняется
 
 
 \theoremstyle{mydefinition} % первая команда для ввода окружений, не связанных с доказательствами
-\newtheorem{m-new-env-second}{Название\_окружения}[chapter] 
+\newtheorem{m-new-env-second}{Название\_окружения}[chapter]
 % вместо m-new-env-second необходимо подставить название нового окружения;
 % вместо Название\_окружения необходимо подставить название окружения, выводящееся в pdf;
 % последний параметр обеспечивает нумерацию в пределах главы не меняется
