Removed redundant LaTeX files from `tex` folder to streamline the project structure.

--- a/2025-summer-practice.tex
+++ b/2025-summer-practice.tex
@@ -2,7 +2,7 @@
 
 \setcounter{docType}{2}
 
-\input{my_folder/0_my_settings}
+\input{chapters/0_my_settings}
 
 
 \begin{document}
@@ -10,30 +10,30 @@
 \input{template_settings/common/renames}
 
 
-\input{my_folder/10_title}
-\input{my_folder/20_contents}
-\input{my_folder/30_introduction}
+\input{chapters/10_title}
+\input{chapters/20_contents}
+\input{chapters/30_introduction}
 
-\input{my_folder/41_chapter1}
+\input{chapters/41_chapter1}
 \ContinueChapterBegin
-\input{my_folder/42_chapter2}
-\input{my_folder/43_chapter3}
-\input{my_folder/44_chapter4}
+\input{chapters/42_chapter2}
+\input{chapters/43_chapter3}
+\input{chapters/44_chapter4}
 \ContinueChapterEnd
-\input{my_folder/50_conclusion}
+\input{chapters/50_conclusion}
 
 %% Наличие следующих перечней не исключает расшифровку сокращения и условного обозначения при первом упоминании в тексте!
 % Необязательная рубрика! Список сокращений и условных обозначений
-\input{my_folder/60_acronyms}
+\input{chapters/60_acronyms}
 
 % Необязательная рубрика! Словарь терминов
 % По порядку после Списка сокращений и условных обозначений, если есть.
-\input{my_folder/70_dictionary}
-\input{my_folder/80_references}
+\input{chapters/70_dictionary}
+\input{chapters/80_references}
 
 \appendix
 
-\input{my_folder/90_appendix1}
-\input{my_folder/91_appendix2}
+\input{chapters/90_appendix1}
+\input{chapters/91_appendix2}
 
 \end{document}
