Continue components section and clean up unused references/figures.

--- a/2025-summer-practice.tex
+++ b/2025-summer-practice.tex
@@ -24,16 +24,16 @@
 
 %% Наличие следующих перечней не исключает расшифровку сокращения и условного обозначения при первом упоминании в тексте!
 % Необязательная рубрика! Список сокращений и условных обозначений
-\input{chapters/60_acronyms}
+% \input{chapters/60_acronyms}
 
 % Необязательная рубрика! Словарь терминов
 % По порядку после Списка сокращений и условных обозначений, если есть.
-\input{chapters/70_dictionary}
+% \input{chapters/70_dictionary}
 \input{chapters/80_references}
 
 \appendix
 
-\input{chapters/90_appendix1}
-\input{chapters/91_appendix2}
+% \input{chapters/90_appendix1}
+% \input{chapters/91_appendix2}
 
 \end{document}
