--- a/template_settings/common/renames.tex
+++ b/template_settings/common/renames.tex
@@ -37,7 +37,7 @@
 %%% Первый консультант
 \newcommand{\ConsultantExtraFull}{Маркелов Максим Александрович} % Фамилия Имя Отчетство дополнительного консультанта
 \newcommand{\ConsultantExtra}{М.А.\,Маркелов} % И. О. Фамилия дополнительного консультанта
-\newcommand{\ConsultantExtraDegree}{тех. руководитель команды разработки} %
+\newcommand{\ConsultantExtraDegree}{тех. руководитель команды разработки Mindbox} %
 \newcommand{\ConsultantExtraVin}{И.О.\,Фамилию} % И. О. Фамилия дополнительного консультанта в винительном падеже (Кого? что? Руководителя ...)
 \newcommand{\ConsultantExtraDegreeVin}{должность, степень} %  в винительном падеже (Кого? что? Руководителя ...)
 %%% Второй консультант
